--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,24 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
 	background-color: #1e1e22;
 	color: #eff7fc;
 	text-align: center;
+}
+
+.work {
+	max-width: 100em;
+	margin: 0 auto;
+}
+
+.work a {
+	padding: 1em;
+	text-decoration: none;
+	display: inline-block;
 }
 
 img {
@@ -9,9 +26,4 @@ img {
 	width: 38.4em;
 	height: 24em;
 	margin: auto;
-	display: block;
-}
-
-.work a {
-	padding: 1em;
 }
