--- a/portfolio.css
+++ b/portfolio.css
@@ -10,6 +10,12 @@ body {
 	text-align: center;
 }
 
+header {
+	display: block;
+	padding: 27em 0;
+	margin: 0 auto;
+}
+
 h1 {
 	font-size: 3em;
 	border-bottom: 1px solid #eff7fc;
@@ -19,7 +25,9 @@ h1 {
 }
 
 h2 {
+	width: 12em;
 	padding: 0.2em;
+	margin: 0 auto;
 }
 
 .work {
