--- a/portfolio.css
+++ b/portfolio.css
@@ -42,7 +42,9 @@ h2 {
 }
 
 img {
-	border-radius: 10px;
+	border-radius: 24px;
+	border: 3px solid #eff7fc;
+	padding: 10px;
 	width: 38.4em;
 	height: 24em;
 	margin: auto;
