--- a/portfolio.css
+++ b/portfolio.css
@@ -8,6 +8,7 @@ body {
 	--bg-color: #1e1e22;
 	--text-color: #eff7fc;
 	--section-color: #4b4b50;
+	--tooltip-color: #00002266;
 	
 	background-color: var(--bg-color);
 	color: var(--text-color);
@@ -40,18 +41,47 @@ h2 {
 }
 
 .work a {
-	padding: 1em;
+	--img-border-radius: 12px;
+	
+	margin: 1em;
 	text-decoration: none;
 	display: inline-block;
-}
-
-img {
 	border-radius: 24px;
 	border: 3px solid var(--text-color);
 	padding: 10px;
+}
+
+img {
 	width: 38.4em;
 	height: 24em;
 	margin: auto;
+	border-radius: var(--img-border-radius);
+}
+
+.work a h3 {
+	position: relative;
+	top: 0.5em;
+	height: 0;
+	background-color: transparent;
+	color: transparent;
+	font-size: 1.5em;
+	z-index: 0;
+}
+
+.work a:hover h3 {
+	color: var(--text-color);
+}
+
+.work a:hover h3::before {
+	background-color: var(--tooltip-color);
+	height: 2.5em;
+	width: 100%;
+	content: "";
+	display: block;
+	position: absolute;
+	top: -0.8em;
+	border-radius: var(--img-border-radius) var(--img-border-radius) 0 0;
+	z-index: -1;
 }
 
 footer {
