--- a/portfolio.css
+++ b/portfolio.css
@@ -44,6 +44,7 @@ h2 {
 	--img-border-radius: 12px;
 	--img-width: 38.4em;
 	--img-height: 24em;
+	--tooltip-show-duration: 0.5s;
 	
 	margin: 1em;
 	text-decoration: none;
@@ -65,16 +66,18 @@ img {
 	position: relative;
 	top: 0.5em;
 	height: 0;
-	color: transparent;
+	color: var(--text-color);
+	opacity: 0;
 	font-size: 1.5em;
 	z-index: 0;
+	transition: opacity var(--tooltip-show-duration);
 }
 
 .work a:hover h3 {
-	color: var(--text-color);
+	opacity: 1;
 }
 
-.work a:hover h3::before {
+.work a h3::before {
 	background-color: var(--tooltip-color);
 	height: 2.4em;
 	width: 100%;
@@ -87,21 +90,23 @@ img {
 }
 
 .work a p {
+	color: var(--text-color);
 	position: absolute;
 	top: 22.63em;
 	width: var(--img-width);
-	color: transparent;
 	font-size: 1.0em;
 	z-index: 0;
 	margin: 0;
 	padding: 0;
+	opacity: 0;
+	transition: opacity var(--tooltip-show-duration);
 }
 
 .work a:hover p {
-	color: var(--text-color);
+	opacity: 1;
 }
 
-.work a:hover p::before {
+.work a p::before {
 	background-color: var(--tooltip-color);
 	top: -0.8em;
 	height: 2.8em;
